--- a/build.gradle
+++ b/build.gradle
@@ -34,4 +34,7 @@ dependencies {
     api 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.okhttp3:okhttp:3.6.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.6.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.13'
+    api ('android.arch.paging:runtime:1.0.0')
 }
