--- a/build.gradle
+++ b/build.gradle
@@ -37,4 +37,6 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.13'
     api ('android.arch.paging:runtime:1.0.0')
+    api 'android.arch.persistence.room:runtime:1.1.0'
+    api 'android.arch.persistence.room:rxjava2:1.0.0'
 }
